--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toko Celine - Premium Exchange</title>
+  <title>✨ Trusted Digital Exchange ✨</title>
+  
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><circle cx=%2250%22 cy=%2250%22 r=%2245%22 fill=%22%2322c55e%22/><text y=%22.75em%22 x=%2250%%22 text-anchor=%22middle%22 font-size=%2270%22 fill=%22white%22 font-family=%22Arial%22 font-weight=%22bold%22>$</text></svg>">
+
   <script src="https://cdn.tailwindcss.com"></script>
   
   <script>
@@ -17,29 +20,6 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
 
-    /* Animasi Muncul & Melayang */
-    @keyframes fadeInPage {
-      from { opacity: 0; transform: scale(0.9) translateY(20px); }
-      to { opacity: 1; transform: scale(1) translateY(0); }
-    }
-    @keyframes float {
-      0%, 100% { transform: translateY(0px); }
-      50% { transform: translateY(-10px); }
-    }
-    .page-transition {
-      animation: fadeInPage 1s cubic-bezier(0.22, 1, 0.36, 1) forwards,
-                 float 4s ease-in-out infinite;
-    }
-
-    #video-bg {
-      position: fixed;
-      right: 0; bottom: 0;
-      min-width: 100%; min-height: 100%;
-      z-index: -1;
-      object-fit: cover;
-      filter: brightness(0.6);
-    }
-
     body {
       min-height: 100vh;
       display: flex;
@@ -48,54 +28,48 @@
       margin: 0;
       font-family: 'Plus Jakarta Sans', sans-serif;
       background-color: #000;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
-    /* EFEK EMBOSSED + ANIMASI WARNA */
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    #video-bg {
+      position: fixed;
+      right: 0; bottom: 0;
+      min-width: 100%; min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
+      filter: brightness(0.45);
+    }
+
+    .glass-card {
+      background: rgba(255, 255, 255, 0.07);
+      backdrop-filter: blur(35px);
+      -webkit-backdrop-filter: blur(35px);
+      border: 1px solid rgba(255, 255, 255, 0.12);
+      box-shadow: 0 50px 100px -20px rgba(0, 0, 0, 0.7);
     }
 
     .embossed-text {
-      font-weight: 900;
-      letter-spacing: -0.05em;
-      background: linear-gradient(to bottom, #ffffff, #8b5cf6, #3b82f6);
-      background-size: 200% auto;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: gradientShift 4s linear infinite;
-      /* Teknik Shadow untuk efek Embossed (Timbul) */
+      font-weight: 800;
+      color: white;
       text-shadow: 
-        -1px -1px 0px rgba(255,255,255,0.4), 
-         1px  1px 0px rgba(0,0,0,0.8),
-         2px  2px 10px rgba(0,0,0,0.5);
+        -1px -1px 0px rgba(255,255,255,0.3), 
+         1px  1px 0px rgba(0,0,0,0.8);
     }
 
-    /* Luxury Glass Effect */
-    .glass-card {
-      background: rgba(255, 255, 255, 0.12);
-      backdrop-filter: blur(25px);
-      -webkit-backdrop-filter: blur(25px);
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.6);
+    .btn-action {
+      background: #ffffff;
+      color: #000000;
+      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 
-    .glass-inner {
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+    .btn-action:hover {
+      background: #f0f0f0;
+      transform: scale(1.05);
     }
 
-    .animated-gradient {
-      background: linear-gradient(-45deg, #a855f7, #3b82f6, #ec4899, #8b5cf6);
-      background-size: 400% 400%;
-      animation: gradientShift 8s ease infinite;
-    }
-
-    .smooth-transition {
-      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    .total-box {
+      background: linear-gradient(135deg, #7c3aed, #2563eb);
+      box-shadow: 0 15px 30px rgba(37, 99, 235, 0.3);
     }
 
     input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
@@ -109,67 +83,56 @@
     <source src="gambar3.mp4" type="video/mp4">
   </video>
 
-  <div class="max-w-md w-full glass-card rounded-[2.5rem] overflow-hidden p-8 relative page-transition">
-    <div class="absolute top-0 left-0 w-full h-1.5 animated-gradient"></div>
-
-    <div class="text-center mb-8 mt-4">
-      <h1 class="text-5xl embossed-text mb-2">Toko Celine</h1>
-      <div class="inline-block px-4 py-1.5 rounded-full glass-inner text-[10px] text-blue-200 font-bold uppercase tracking-[0.2em]">
-        💎 Premium Dollar Supplier 💎
-      </div>
+  <div class="max-w-md w-full glass-card rounded-[3.5rem] p-10 relative text-white text-center">
+    
+    <div class="mb-10">
+      <h1 class="text-5xl embossed-text tracking-tighter mb-2">Toko Celine</h1>
+      <p class="text-green-400 text-[10px] font-black uppercase tracking-[0.4em]">Official Dollar Store</p>
     </div>
 
-    <div class="glass-inner rounded-3xl p-5 mb-8 text-center transform smooth-transition hover:scale-[1.02]">
-      <div class="flex items-center justify-center gap-2 mb-1">
-        <span class="w-2 h-2 rounded-full animated-gradient animate-pulse"></span>
-        <p class="text-[10px] font-extrabold text-blue-100 uppercase tracking-widest">Rate Jual Hari Ini</p>
-      </div>
-      <p id="tanggalRealtime" class="text-[12px] text-white/50 mb-2"></p>
-      <h3 id="displayRate" class="text-4xl font-black text-white tracking-tight italic">Rp 0</h3>
+    <div class="bg-white/5 rounded-[2rem] py-6 mb-10 border border-white/5">
+      <p class="text-[10px] text-white/40 font-bold uppercase tracking-widest mb-1">Today's Rate</p>
+      <h3 id="displayRate" class="text-3xl font-black text-white">Rp 0</h3>
+      <p id="tanggalRealtime" class="text-[11px] text-white/20 mt-1"></p>
     </div>
     
-    <div class="mb-8 relative text-center">
-      <label class="block text-[11px] font-bold text-blue-200 mb-3 uppercase tracking-[0.15em]">Ketik dibawah ini untuk Dollar yang mau dibeli</label>
-      <div class="relative group">
-        <div class="absolute inset-y-0 left-6 flex items-center text-blue-300 font-bold text-2xl group-focus-within:text-white smooth-transition">$</div>
+    <div class="mb-10">
+      <label class="text-[11px] font-bold text-white/40 uppercase tracking-widest mb-6 block">Ketik dibawah ini untuk Dollar yang mau dibeli</label>
+      <div class="relative inline-flex items-center justify-center">
+        <span class="text-4xl font-bold text-green-500 mr-2">$</span>
         <input type="number" id="usdInput" placeholder="0" oninput="hitung()"
-          class="block w-full pl-14 pr-8 py-6 bg-white/5 border-2 border-white/10 rounded-[2rem] outline-none text-4xl font-bold text-white text-center smooth-transition focus:border-blue-400 focus:bg-white/10 shadow-2xl placeholder:text-white/10">
+          class="bg-transparent border-b-2 border-white/10 py-2 text-6xl font-black text-white outline-none focus:border-green-500 transition-all w-48 text-center placeholder:text-white/5">
       </div>
     </div>
 
-    <div class="animated-gradient p-8 rounded-[2rem] text-center shadow-[0_20px_40px_-15px_rgba(168,85,247,0.5)] transform smooth-transition hover:scale-105 active:scale-95 cursor-pointer mb-8">
-      <p class="text-[10px] text-white font-black uppercase tracking-[0.2em] opacity-80">Total yang harus dibayarkan</p>
-      <h1 id="idrOutput" class="text-4xl font-black text-white mt-2 drop-shadow-lg tracking-tight">Rp 0</h1>
+    <div class="total-box p-8 rounded-[2.5rem] mb-10">
+      <p class="text-[10px] text-white/60 font-bold uppercase tracking-widest mb-1">Total harus dibayar</p>
+      <h1 id="idrOutput" class="text-4xl font-black text-white tracking-tight">Rp 0</h1>
     </div>
 
-    <div class="border-t border-white/10 pt-8 text-center">
-      <p class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] mb-4">Hubungi Admin Untuk Order</p>
-      <a href="https://t.me/selinnaa" target="_blank" 
-         class="inline-flex items-center gap-4 bg-white/10 border border-white/20 px-10 py-4 rounded-full smooth-transition hover:bg-white/20 hover:border-white/40 hover:-translate-y-1 active:scale-90 group">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" class="w-6 h-6 group-hover:rotate-12 transition-transform">
-        <span class="text-white font-extrabold tracking-tight">@selinnaa</span>
-      </a>
-    </div>
+    <a href="https://t.me/selinnaa" target="_blank" 
+       class="btn-action inline-flex items-center gap-3 px-12 py-5 rounded-full font-black text-sm uppercase tracking-wider shadow-xl">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="TG" class="w-5 h-5">
+      Hubungi Admin
+    </a>
 
-    <p class="text-[13px] text-white font-bold mt-8 italic text-center drop-shadow-[0_2px_4px_rgba(0,0,0,1)] bg-black/20 py-2 rounded-xl border border-white/5">
-      *Rate sewaktu-waktu dapat berubah, pastikan bosku update ^^
+    <p class="text-[12px] text-white/70 font-bold mt-10 italic drop-shadow-md block">
+      *Rate sewaktu-waktu dapat berubah, pastikan bosku selalu update ^^
     </p>
+
   </div>
 
   <script>
     function updateTanggal() {
       const opsi = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-      const hariIni = new Date().toLocaleDateString('id-ID', opsi);
-      document.getElementById('tanggalRealtime').innerText = hariIni;
+      document.getElementById('tanggalRealtime').innerText = new Date().toLocaleDateString('id-ID', opsi);
     }
 
     function hitung() {
       const usd = document.getElementById('usdInput').value;
       const total = usd * rateAktif;
       const formatter = new Intl.NumberFormat('id-ID', {
-        style: 'currency',
-        currency: 'IDR',
-        minimumFractionDigits: 0
+        style: 'currency', currency: 'IDR', minimumFractionDigits: 0
       });
       document.getElementById('idrOutput').innerText = (usd > 0) ? formatter.format(total) : "Rp 0";
     }
@@ -179,4 +142,3 @@
   </script>
 </body>
 </html>
-
