--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
 
+    /* 1. TRANSISI HALAMAN SAAT DIBUKA (ENTRY ANIMATION) */
+    @keyframes pageIn {
+      0% { opacity: 0; transform: scale(0.95) translateY(30px); filter: blur(10px); }
+      100% { opacity: 1; transform: scale(1) translateY(0); filter: blur(0); }
+    }
+
+    .page-entry {
+      animation: pageIn 1.2s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+    }
+
+    /* 2. ANIMASI FLOATING (SETELAH TRANSISI SELESAI) */
+    @keyframes float {
+      0%, 100% { transform: translateY(0px); }
+      50% { transform: translateY(-15px); }
+    }
+
+    /* Gabungkan Entry dan Floating */
+    .master-container {
+      animation: pageIn 1.2s cubic-bezier(0.22, 1, 0.36, 1) forwards,
+                 float 4s ease-in-out infinite 1.2s; /* Floating jalan setelah entry selesai */
+    }
+
     @keyframes gradientShift {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -30,15 +52,6 @@
       background: linear-gradient(-45deg, #a855f7, #3b82f6, #ec4899, #8b5cf6);
       background-size: 400% 400%;
       animation: gradientShift 8s ease infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0px); }
-      50% { transform: translateY(-15px); }
-    }
-
-    .floating-card {
-      animation: float 4s ease-in-out infinite;
     }
 
     body {
@@ -85,12 +98,12 @@
     .btn-action {
       background: #ffffff;
       color: #000000;
-      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 
     .btn-action:hover {
       background: #f0f0f0;
-      transform: scale(1.1);
+      transform: scale(1.08);
       box-shadow: 0 0 25px rgba(255,255,255,0.5);
     }
 
@@ -105,7 +118,7 @@
     <source src="gambar3.mp4" type="video/mp4">
   </video>
 
-  <div class="max-w-md w-full glass-card rounded-[3.5rem] p-10 relative text-white text-center floating-card">
+  <div class="max-w-md w-full glass-card rounded-[3.5rem] p-10 relative text-white text-center master-container">
     
     <div class="mb-10">
       <h1 class="text-5xl embossed-text mb-2">Toko Celine</h1>
