--- a/index.html
+++ b/index.html
@@ -20,25 +20,16 @@
       font-family: 'Montserrat', sans-serif !important;
     }
 
+    /* Hanya animasi muncul di awal tanpa efek scaling/perbesaran */
     @keyframes pageIn {
-      0% { opacity: 0; transform: scale(0.9); filter: blur(10px); }
-      100% { opacity: 1; transform: scale(1); filter: blur(0); }
+      0% { opacity: 0; filter: blur(10px); }
+      100% { opacity: 1; filter: blur(0); }
     }
 
-    @keyframes floatingCombo {
-      0%, 100% { 
-        transform: translateY(0) scale(1); 
-        box-shadow: 0 30px 60px -12px rgba(0, 0, 0, 0.8), 0 0 15px rgba(168, 85, 247, 0.2);
-      }
-      50% { 
-        transform: translateY(-15px) scale(1.02); 
-        box-shadow: 0 50px 80px -20px rgba(0, 0, 0, 0.9), 0 0 40px rgba(59, 130, 246, 0.4);
-      }
-    }
-
+    /* Menghapus floatingCombo agar tidak bergerak atas bawah */
     .master-container {
-      animation: pageIn 1.5s cubic-bezier(0.22, 1, 0.36, 1) forwards,
-                 floatingCombo 4s ease-in-out infinite 1.5s;
+      animation: pageIn 1.5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+      box-shadow: 0 30px 60px -12px rgba(0, 0, 0, 0.8);
     }
 
     @keyframes gradientShift {
@@ -61,7 +52,7 @@
       margin: 0;
       font-family: 'Plus Jakarta Sans', sans-serif;
       background-color: #000;
-      overflow-x: hidden; /* Mencegah scroll horizontal */
+      overflow-x: hidden;
     }
 
     #video-bg {
@@ -142,7 +133,7 @@
 
     <a href="https://t.me/selinnaa" target="_blank" 
        class="btn-action inline-flex items-center gap-2 sm:gap-3 px-8 sm:px-12 py-4 sm:py-5 rounded-full font-black text-[12px] sm:text-sm uppercase tracking-wider shadow-xl">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="TG" class="w-4 h-4 sm:w-5 sm:w-5">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="TG" class="w-4 h-4 sm:w-5">
       Hubungi Celine!
     </a>
 
